debug_149: Reduce spacer height & Fix Menu Z-Index

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ body {
     background: var(--panel);
     border: 1px solid var(--border);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
-    z-index: 2000;
+    z-index: 200000;
     display: none;
     padding: 15px;
 }
